add unit test on Signature class