@@ -3,11 +3,11 @@ package net.sokontokoro_factory.tweetly_oauth.logic;
 import net.sokontokoro_factory.tweetly_oauth.TweetlyOAuthException;
 import net.sokontokoro_factory.tweetly_oauth.util.Calculation;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
-import java.util.Base64;
 import java.util.TreeMap;
 
 /**
@@ -17,7 +17,7 @@ public class Signature {
     /**
      *
      * @param consumer_secret
-     * @param oauth_token_secret
+     * @param oauth_token_secret token未取得時は空文字列("")を指定すること
      * @param requestMethod
      * @param requestURL
      * @param element
@@ -32,7 +32,6 @@ public class Signature {
 
         String key = createKey(consumer_secret, oauth_token_secret);
         String data = createData(requestMethod, requestURL, element);
-
         return calculateSignature(data.toString(), key);
     }
 
@@ -42,7 +41,7 @@ public class Signature {
      * @param oauth_token_secret
      * @return
      */
-    public static String createKey(String consumer_secret, String oauth_token_secret){
+    private static String createKey(String consumer_secret, String oauth_token_secret){
         return consumer_secret + "&" + oauth_token_secret;
     }
 
@@ -53,7 +52,7 @@ public class Signature {
      * @param element
      * @return
      */
-    public static String createData(
+    private static String createData(
             String requestMethod,
             String requestURL,
             TreeMap<String,String> element) throws TweetlyOAuthException {
@@ -85,18 +84,18 @@ public class Signature {
      * @param key
      * @return
      */
-    public static String calculateSignature(String data, String key) throws TweetlyOAuthException {
+    private static String calculateSignature(String data, String key) throws TweetlyOAuthException {
         byte[] signature_sha1 = null;
         String signature = null;
         try {
             signature_sha1 = Calculation.calcHmacSHA1(data, key);
-            String signature_base64 = Base64.getEncoder().encodeToString(signature_sha1);
+//            String signature_base64 = Base64.getEncoder().encodeToString(signature_sha1);
+            String signature_base64 = DatatypeConverter.printBase64Binary(signature_sha1);
             signature = URLEncoder.encode(signature_base64, "UTF-8");
         } catch (InvalidKeyException | NoSuchAlgorithmException | UnsupportedEncodingException e) {
             e.printStackTrace();
             throw new TweetlyOAuthException();
         }
-
         return signature;
     }
 }
